--- a/index 2.html
+++ b/index 2.html
@@ -37,7 +37,7 @@ developer & designer</em> who creates digital experiences for <em>fashion, lifes
   alt="Nylon image" class="nylon">
   </div>
   <div>
-    <img src="/Users/rebeccacofie/Documents/2020 ENERGY/Coding /Portfolio Site v2/Images/Rectangle 6.png"
+    <img src="/https://raw.githubusercontent.com/rcofie/test-code/master/Rectangle%206.png?token=ANP2IKUO2DBXJTXN232MDLS7KJMBS"
     alt="orange-square" class="orange-square">
   </div>
   </div>
